# zkproof-rust

./: README.md
zkp/: Cargo.toml  Dockerfile  build.rs  docker-compose.yml
zkp/proto/: zkp_auth.proto
zkp/src/: lib.rs  zkp_auth.rs
